# habit_agent

./: .env.example  README.md  celerybeat-schedule.dir  docker-compose.yml  habits.db  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 6eb50208b3d4_add_success.py  99ef640b294d_изменение_поля_success.py  e63e0f08e6cf_add_complete_today.py  e65ea5fe7110_add_habit_checkins.py  ff6684c2bc76_create_habits_table.py
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: habit.py  health.py
app/core/: config.py  db.py  redis_init.py  redis_keys.py
app/core/celery/: celery_app.py  celery_tasks.py
app/crud/: base.py  habit.py  habit_checkin.py
app/models/: base.py  habit.py
app/schemas/: habit.py  health.py
app/services/: habit.py
tests/: conftest.py  test_api.py
